--- a/Motor2D/Platformer.vcxproj.filters
+++ b/Motor2D/Platformer.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="j1Transition.h">
       <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
+    <ClInclude Include="Brofiler.h">
+      <Filter>Desenvolupament  ========\Tools</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Programacio 2 ===========">
