--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -85,6 +85,7 @@
     <ClCompile Include="j1Audio.cpp" />
     <ClCompile Include="j1Input.cpp" />
     <ClCompile Include="j1Map.cpp" />
+    <ClCompile Include="j1Pathfinding.cpp" />
     <ClCompile Include="j1Scene.cpp" />
     <ClCompile Include="j1Transition.cpp" />
     <ClCompile Include="j1Walking_Enemy.cpp" />
@@ -103,6 +104,7 @@
     <ClInclude Include="j1EntityManager.h" />
     <ClInclude Include="j1Flying_Enemy.h" />
     <ClInclude Include="j1Map.h" />
+    <ClInclude Include="j1Pathfinding.h" />
     <ClInclude Include="j1Player.h" />
     <ClInclude Include="j1Scene.h" />
     <ClInclude Include="j1Walking_Enemy.h" />
