--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -102,6 +102,7 @@
     <ClCompile Include="UI_Button.cpp" />
     <ClCompile Include="UI_Image.cpp" />
     <ClCompile Include="UI_InputBox.cpp" />
+    <ClCompile Include="UI_Slider.cpp" />
     <ClCompile Include="UI_Text.cpp" />
     <ClCompile Include="UI_Window.cpp" />
   </ItemGroup>
@@ -141,6 +142,7 @@
     <ClInclude Include="UI_element.h" />
     <ClInclude Include="UI_Image.h" />
     <ClInclude Include="UI_InputBox.h" />
+    <ClInclude Include="UI_Slider.h" />
     <ClInclude Include="UI_Text.h" />
     <ClInclude Include="UI_Window.h" />
   </ItemGroup>
