--- a/Motor2D/Platformer.vcxproj.filters
+++ b/Motor2D/Platformer.vcxproj.filters
@@ -88,6 +88,9 @@
     <ClCompile Include="UI_Slider.cpp">
       <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
     </ClCompile>
+    <ClCompile Include="j1Collectible.cpp">
+      <Filter>Desenvolupament  ========\Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="j1Window.h">
@@ -203,6 +206,9 @@
     </ClInclude>
     <ClInclude Include="UI_Slider.h">
       <Filter>Desenvolupament  ========\Modules\UI_Elements</Filter>
+    </ClInclude>
+    <ClInclude Include="j1Collectible.h">
+      <Filter>Desenvolupament  ========\Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
