--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -101,6 +101,7 @@
     <ClCompile Include="j1Window.cpp" />
     <ClCompile Include="PugiXml\src\pugixml.cpp" />
     <ClCompile Include="UI_Button.cpp" />
+    <ClCompile Include="UI_Clock.cpp" />
     <ClCompile Include="UI_Image.cpp" />
     <ClCompile Include="UI_InputBox.cpp" />
     <ClCompile Include="UI_Slider.cpp" />
@@ -141,6 +142,7 @@
     <ClInclude Include="PugiXml\src\pugiconfig.hpp" />
     <ClInclude Include="PugiXml\src\pugixml.hpp" />
     <ClInclude Include="UI_Button.h" />
+    <ClInclude Include="UI_Clock.h" />
     <ClInclude Include="UI_element.h" />
     <ClInclude Include="UI_Image.h" />
     <ClInclude Include="UI_InputBox.h" />
