--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -80,7 +80,6 @@
     <ClCompile Include="j1FlyingEnemy.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
-    <ClCompile Include="j1IntroScene.cpp" />
     <ClCompile Include="j1UI_Scene.cpp" />
     <ClCompile Include="j1WalkingEnemy.cpp" />
     <ClCompile Include="j1Collision.cpp" />
@@ -105,6 +104,7 @@
     <ClCompile Include="UI_Clock.cpp" />
     <ClCompile Include="UI_Image.cpp" />
     <ClCompile Include="UI_InputBox.cpp" />
+    <ClCompile Include="UI_PlayerInfo.cpp" />
     <ClCompile Include="UI_Slider.cpp" />
     <ClCompile Include="UI_Text.cpp" />
     <ClCompile Include="UI_Window.cpp" />
@@ -115,7 +115,6 @@
     <ClInclude Include="j1FlyingEnemy.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Gui.h" />
-    <ClInclude Include="j1IntroScene.h" />
     <ClInclude Include="j1UIScene.h" />
     <ClInclude Include="j1WalkingEnemy.h" />
     <ClInclude Include="j1Collision.h" />
@@ -148,6 +147,7 @@
     <ClInclude Include="UI_element.h" />
     <ClInclude Include="UI_Image.h" />
     <ClInclude Include="UI_InputBox.h" />
+    <ClInclude Include="UI_PlayerInfo.h" />
     <ClInclude Include="UI_Slider.h" />
     <ClInclude Include="UI_Text.h" />
     <ClInclude Include="UI_Window.h" />
