--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -80,6 +80,7 @@
     <ClCompile Include="j1FlyingEnemy.cpp" />
     <ClCompile Include="j1Fonts.cpp" />
     <ClCompile Include="j1Gui.cpp" />
+    <ClCompile Include="j1Transition.cpp" />
     <ClCompile Include="j1UI_Scene.cpp" />
     <ClCompile Include="j1WalkingEnemy.cpp" />
     <ClCompile Include="j1Collision.cpp" />
@@ -115,6 +116,7 @@
     <ClInclude Include="j1FlyingEnemy.h" />
     <ClInclude Include="j1Fonts.h" />
     <ClInclude Include="j1Gui.h" />
+    <ClInclude Include="j1Transition.h" />
     <ClInclude Include="j1UIScene.h" />
     <ClInclude Include="j1WalkingEnemy.h" />
     <ClInclude Include="j1Collision.h" />
