--- a/Motor2D/Platformer.vcxproj
+++ b/Motor2D/Platformer.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="UI_Clock.cpp" />
     <ClCompile Include="UI_FinalInfo.cpp" />
     <ClCompile Include="UI_Image.cpp" />
+    <ClCompile Include="UI_InputBox.cpp" />
     <ClCompile Include="UI_PlayerInfo.cpp" />
     <ClCompile Include="UI_Slider.cpp" />
     <ClCompile Include="UI_Text.cpp" />
@@ -149,6 +150,7 @@
     <ClInclude Include="UI_element.h" />
     <ClInclude Include="UI_FinalInfo.h" />
     <ClInclude Include="UI_Image.h" />
+    <ClInclude Include="UI_InputBox.h" />
     <ClInclude Include="UI_PlayerInfo.h" />
     <ClInclude Include="UI_Slider.h" />
     <ClInclude Include="UI_Text.h" />
